@@ -1,6 +1,10 @@
 2018-05-07  Adhemerval Zanella  <adhemerval.zanella@linaro.org>
 
 	[BZ #12683]
+	* sysdeps/unix/sysv/linux/riscv/sigcontextinfo.h (ucontext_get_pc):
+	New fuction.
+
+	[BZ #12683]
 	* sysdeps/unix/sysv/linux/hppa/sigcontextinfo.h: New file.
 	* sysdeps/unix/sysv/linux/hppa/syscall_cancel.S: Likewise.
 
